--- a/css/style.css
+++ b/css/style.css
@@ -333,3 +333,9 @@ button:hover {
     height: 250px; 
 }
 
+#loadingIndicator {
+    color: limegreen;
+    padding: 10px;
+    margin-top: 10px;
+    text-align: center;
+}
