--- a/css/style.css
+++ b/css/style.css
@@ -378,3 +378,12 @@ button:hover {
 .hideButton {
     display: none;
 }
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-out;
+}
+
+.fade-in.visible {
+    opacity: 1;
+}
